# luchii

./: .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  ADVANCED_ARCHITECTURE.md  AGENT_BLUEPRINTS.md  AGENT_FRAMEWORK_V2.md  API_GATEWAY_SPEC.md  ARCHITECTURE.md  AUTONOMOUS_CLOUD_GUIDE.md  CREATE_PR_INSTRUCTIONS.txt  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DOMAINS.md  Dockerfile.autonomous  GLOBAL_ACTIVATION_COMPLETE.md  GLOSSARY.md  GOVERNANCE_ACTIVATION_PLAYBOOK.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  LAUNCH_COMMUNICATIONS_PLAYBOOK.md  LAUNCH_DAY_COMMAND_CENTER.md  LAUNCH_DAY_EXECUTION_REPORT.md  LAUNCH_READINESS_REPORT.md  LICENSE  LOCAL_DEV_QUICK_REF.md  MASTER_SPEC.md  MONITORING_ALERTS_CONFIG.md  PLATFORM.md  PR_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  SYSTEM_ACTIVATION_CHECKLIST.md  SYSTEM_INTELLIGENCE_COMPONENTS.md  TOOLS.md  deploy.sh  docker-compose.autonomous.yml  (+10 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
ai-court/: .env.example  Dockerfile.template  README.md  docker-compose.yml  openapi-security-overlay.yaml
blueprints/: README.md  ci-quality-gates.md  frasbergai-deployment-blueprint.md
chapters/: README.md
civilizations/: README.md
diagrams/: README.md
docs/: ADMIN_BYPASS_AUTHORIZATION_MEMO.md  AUTONOMOUS_CLOUD_ARCHITECTURE.md  BOOTSTRAP_SOVEREIGN_OVERRIDE.md  BRANCH_CREATION_CONFIRMATION_LOG.md  CI_CD_OVERVIEW.md  CONSTITUTIONAL_COMPLIANCE_CERTIFICATE.md  CONTRIBUTOR_POLICY.md  CYCLE_2_AUTHORITY_TRANSITION_MEMO.md  (+88 more)
(+349 files in other folders)
