[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luchii"
version = "1.0.0"
description = "FrasbergAI Genesis-Prime Cognitive Model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.110.0",
  "uvicorn==0.29.0",
  "pydantic==2.6.3",
  "pydantic-settings>=2.2.1,<3.0.0",
  "httpx==0.27.0",
  "python-dotenv==1.0.1",
  "prometheus-client==0.20.0",
  "torch>=2.2.0",
  "numpy>=1.26.0",
  "transformers>=4.40.0",
  "sentencepiece>=0.1.99",
  "tqdm>=4.66.0",
  "pyyaml>=6.0.1",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "jsonschema>=4.23.0,<5.0.0",
  "mkdocs>=1.6.0,<2.0.0",
  "mkdocs-material>=9.5.0,<10.0.0",
  "openapi-spec-validator>=0.7.1,<1.0.0",
  "pytest>=8.2.0",
]

[tool.setuptools.package-data]
"luchii.config" = ["default.json"]

[project.scripts]
luchii-cli = "luchii.cli:main"
luchii-openapi-generate = "luchii_api.cli.generate_openapi:main"
luchii-openapi-check = "luchii_api.cli.check_openapi:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.flake8]
max-line-length = 100
